--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -8,3 +8,6 @@ VITE_APP_VERSION=1.0.0
 # 开发配置
 VITE_DEV_SERVER_HOST=localhost
 VITE_DEV_SERVER_PORT=3000
+
+# 生产环境配置示例
+# VITE_API_BASE_URL=http://your-server-ip:9001/api
